2005-08-15  Bob Wilson  <bob.wilson@acm.org>

	* elf32-xtensa.c (ELF_MACHINE_CODE, ELF_MACHINE_ALT1): Swap values
	of EM_XTENSA and EM_XTENSA_OLD.

2005-08-16  Alan Modra  <amodra@bigpond.net.au>

	* elf-bfd.h (_bfd_elf_define_linkage_sym): Declare.
	* elflink.c (_bfd_elf_define_linkage_sym): New function, extracted
	from..
	(_bfd_elf_create_got_section): ..here.
	(_bfd_elf_link_create_dynamic_sections): Call it for _DYNAMIC.
	(_bfd_elf_create_dynamic_sections): ..and _PROCEDURE_LINKAGE_TABLE_.
	* elf-m10300.c (_bfd_mn10300_elf_create_got_section): Use
	_bfd_elf_define_linkage_sym.
	* elf32-frv.c (_frv_create_got_section): Likewise.
	* elf64-alpha.c (elf64_alpha_create_dynamic_sections): Likewise.

2005-08-15  Paul Brook  <paul@codesourcery.com>

	* elf32-arm.c (elf32_arm_howto_table_1): Make R_ARM_PLT32 the same as
	R_ARM_PC24.

2005-08-13  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR ld/1135
	* elf64-hppa.c (elf64_hppa_special_sections): Add flag definitions for
	.plt, .dlt, .sdata, .sbss and .tbss.

2005-08-12  Dmitry Diky  <diwil@spec.ru>

	* elf32-msp430.c (msp430_elf_relax_delete_bytes): Adjust relocations
	referenced by .section + DISPLACEMENT.

2005-08-10  James E. Wilson  <wilson@specifix.com>

	* dwarf2.c (scan_unit_for_symbols, case DT_AT_location): Verify that
	DW_OP_addr is only opcode in location before using it.

2005-08-09  H.J. Lu  <hongjiu.lu@intel.com>

	* elfxx-ia64.c (elfNN_ia64_final_link): Reset gp.

2005-08-09  Rodney Brown  <rbrown@bravurasolutions.com.au>
	    Nick Clifton  <nickc@redhat.com>

	* aix5ppc-core.c (xcoff64_core_p): Constify return_value
	variable.  Also, do not use core_hdr macro as it evaluates to a
	cast of an lvalue which is no longer supported by GCC 4.0.

2005-08-08  Eric Dönges <Eric.Doenges@betty-tv.com>

	* archures.c (bfd_mach_msp21): New MSP430 machine number.
	* bfd-in2.h: Regenerate.
	* cpu-msp430.c (arch_info_struct): Add support for msp430x21xx
	variants.

2005-08-07  Nick Clifton  <nickc@redhat.com>